--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="rationale_ask_again">이 어플리케이션은 위치권한 없이는 제대로 동작하지 않습니다. 앱 설정에서 위치권한 설정을 해주십시오</string>
     <string name="title_settings_dialog">권한 요청 필요</string>
     <string name="title_activity_resight_main">RESightMainActivity</string>
-    <string name="action_blooth">Blooth</string>
+    <string name="action_blooth">Bluetooth</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_blooth_settings">Settings</string>
